--- a/nginx/etc/nginx/sites-enabled/app-th.mbharata.com.conf
+++ b/nginx/etc/nginx/sites-enabled/app-th.mbharata.com.conf
@@ -2,11 +2,11 @@ server {
   listen 80;
   listen [::]:80;
   
-  server_name app-th.mbharata.com;
-  root /var/www/static/app-th.mbharata.com;
+  server_name app-in.mbharata.com;
+  root /var/www/static/app-in.mbharata.com;
 
-  access_log /var/log/nginx/mbharata/app-th.mbharata.com.access.log;
-  error_log /var/log/nginx/mbharata/app-th.mbharata.com.error.log;
+  access_log /var/log/nginx/mbharata/app-in.mbharata.com.access.log;
+  error_log /var/log/nginx/mbharata/app-in.mbharata.com.error.log;
 
   include /home/anton/proj/mbharata_server/nginx/etc/nginx/site_include.conf;
 }
