--- a/nginx/etc/nginx/site_include.conf
+++ b/nginx/etc/nginx/site_include.conf
@@ -10,8 +10,16 @@
         add_header Content-Type text/html;
     }
 
+    location /api/ {
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @node_proxy;
+    }
+
     location //api/ {
         try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @node_proxy;
+    }
+
+    location /Images/ {
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_proxy;
     }
 
     location //Images/ {
