--- a/nginx/etc/nginx/sites-enabled/dev.mbharata.com.conf
+++ b/nginx/etc/nginx/sites-enabled/dev.mbharata.com.conf
@@ -2,7 +2,7 @@ server {
   listen 80;
   listen [::]:80;
   
-  server_name dev.mbharata.com;
+  server_name dev2.mbharata.com;
   root /var/www/static/dev.mbharata.com;
 
   access_log /var/log/nginx/mbharata/dev.mbharata.com.access.log;
