--- a/nginx/etc/nginx/site_include.conf
+++ b/nginx/etc/nginx/site_include.conf
@@ -19,50 +19,15 @@
     }
 
     location /Images/ {
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_proxy;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_app_proxy;
     }
 
     location //Images/ {
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_proxy;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_app_proxy;
     }
 
     location /Files/ {
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_proxy;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @varnish_app_proxy;
     }
 
-
-    location @node_proxy {
-        proxy_pass http://127.0.0.1:10811;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_redirect off;
-        proxy_max_temp_file_size 0;
-        proxy_connect_timeout      720;
-        proxy_send_timeout         720;
-        proxy_read_timeout         720;
-        proxy_buffer_size          128k;
-        proxy_buffers              4 256k;
-        proxy_busy_buffers_size    256k;
-        proxy_temp_file_write_size 256k;        
-    }
-
-    location @varnish_proxy {
-        proxy_pass http://127.0.0.1:10812;
-#        proxy_set_header Host $http_host;
-#        proxy_set_header X-Forwarded-Host $http_host;
-        proxy_set_header Host app.mbharata.com;
-        proxy_set_header X-Forwarded-Host app.mbharata.com;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_redirect off;
-        proxy_max_temp_file_size 0;
-        proxy_connect_timeout      720;
-        proxy_send_timeout         720;
-        proxy_read_timeout         720;
-        proxy_buffer_size          128k;
-        proxy_buffers              4 256k;
-        proxy_busy_buffers_size    256k;
-        proxy_temp_file_write_size 256k;        
-    }
+    include /home/anton/proj/mbharata_server/nginx/etc/nginx/proxy_include.conf;
