--- a/nginx/etc/nginx/site_include_new.conf
+++ b/nginx/etc/nginx/site_include_new.conf
@@ -1,21 +1,18 @@
   index index.html;
-
-#  location ~* ^.+\.(css|js|jpg|jpeg|gif|png|ico|gz|svg|svgz|ttf|otf|woff|woff2|eot|mp4|ogg|ogv|webm|webp|zip|swf)$ {
-#    add_header Access-Control-Allow-Origin "*";
-#    expires max;
-#    access_log off;
-#  }
+  error_page  405     =200 $uri;
 
     location ~ \.php$ {
         add_header Content-Type text/html;
     }
 
     location /api/ {
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @node_proxy;
+        add_header Content-Type application/json;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html /$uri/index.json @node_proxy;
     }
 
     location //api/ {
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html @node_proxy;
+        add_header Content-Type application/json;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html /$uri/index.json @node_proxy;
     }
 
     location /Images/ {
