--- a/nginx/etc/nginx/site_include_new.conf
+++ b/nginx/etc/nginx/site_include_new.conf
@@ -7,12 +7,12 @@
 
     location /api/ {
         add_header Content-Type application/json;
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html /$uri/index.json @node_proxy;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html /$uri/index.json @new_proxy;
     }
 
     location //api/ {
         add_header Content-Type application/json;
-        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html /$uri/index.json @node_proxy;
+        try_files /$uri$args /$uri$args/index.html /$uri /$uri/index.html /$uri/index.json @new_proxy;
     }
 
     location /Images/ {
