feat: update project structure and add cloud features support
- Updated application ID and namespace to 'net.nativemind.mahabharata'.
- Added 'flutter_magento' dependency in pubspec.yaml.
- Refactored Flutter environment variables for new project path.
- Removed unused AnantaSound plugin registration in AppDelegate.
- Enhanced cloud functionality with new CloudProvider for synchronization and user authentication.
- Updated UI components to reflect cloud features and settings.
- Improved navigation and state management in the application.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^1.1.2
   dio: ^5.4.0
   connectivity_plus: ^5.0.2
+  flutter_magento: ^2.1.2
   
   # Local Storage
   shared_preferences: ^2.2.2
