feat: update flutter_magento dependency and enhance home screen UI
- Updated 'flutter_magento' dependency to version 2.3.4 in pubspec.yaml and related files.
- Modified CLOUD_INTEGRATION.md to reflect the new version.
- Enhanced home screen UI with a new sliver layout, quick actions, and improved navigation.
- Added new widgets for displaying featured content and user progress statistics.
- Improved overall user experience with a more dynamic and responsive design.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,12 @@ dependencies:
   flutter_riverpod: ^2.4.9
   
   # Network & API
-  http: ^1.1.2
-  dio: ^5.4.0
-  connectivity_plus: ^5.0.2
-  flutter_magento: ^2.1.2
-  
+
+  flutter_magento: ^2.5.1
+  flutter_freedome: ^1.0.0
+  flutter_nft: ^1.0.0
+  flutter_icp: ^1.0.0
+
   # Local Storage
   shared_preferences: ^2.2.2
   sqflite: ^2.3.0
